--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,4 @@
-set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
 set -g renumber-windows on
 set -g mouse on
 set -g history-limit 1000000000
